template adjustment update

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/owl-carousel/owl.carousel.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup/magnific-popup.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/select2/select2.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
        <!-- Template Style -->
        <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" />
