application verification update

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="images/newNasdIcon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="canonical" href="https://nasdfundy.com" />
+    <meta name="og:title" property="og:title" content="NASD CrowdFunding">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="nasdfundy.com is a SEC approved Investment based Crowdfunding Portal designed to ease fundraising activities for MSMEs. Real-time connection of Retail Investors, HSI and Venture Capitalists to MSMEs.
+      HSI means Highly Sophisticated Investor"
     />
-    <link rel="shortcut icon" href="images/newNasdIcon.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
