--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="og:title" property="og:title" content="NASD CrowdFunding">
     <meta
       name="description"
-      content="nasdfundy.com is a SEC approved Investment based Crowdfunding Portal designed to ease fundraising activities for MSMEs. Real-time connection of Retail Investors, HSI and Venture Capitalists to MSMEs.
+      content="ventureramp.com.ng is a SEC approved Investment based Crowdfunding Portal designed to ease fundraising activities for MSMEs. Real-time connection of Retail Investors, HSI and Venture Capitalists to MSMEs.
       HSI means Highly Sophisticated Investor"
     />
     <!--
@@ -58,7 +58,7 @@
     
       
  
-    <title>NASD CrowdFunding</title>
+    <title>NASD VentureRamp</title>
 
   </head>
   <body>
